syntax = "proto3";

package admin;

option go_package = "./pkg/pb/admin";

service Admin{
    rpc AdminSignup(AdminSignupRequest) returns(AdminSignupResponse){};
    rpc AdminLogin(AdminLoginInRequest) returns (AdminLoginResponse){};
    rpc MakePaymentRazorpay(paymentReq)returns (paymentRes){};
    rpc VerifyPayment(verifyreq)returns(verifyres) {};

}
message AdminSignupRequest{
    string firstname=1;
    string lastname=2;
    string email=3;
    string password=4;
}

message AdminSignupResponse{
    int64 status=1;
    AdminDetails adminDetails=2;
    string token=3;
    string error=4;
}

message AdminDetails{
    uint64 id=1;
    string firstname=2;
    string lastname=3;
    string email=4;
}
message AdminLoginInRequest{
    string email=1;
    string password=2;
}
message AdminLoginResponse{
    int64 status=1;
    AdminDetails adminDetails=2;
    string token=3;
    string error=4;
}
message paymentReq{
 uint32 patient_id = 1;
  uint32 doctor_id = 2;
  string doctor_name=3;
  uint64 fees=4;
}
message PaymentDetails {
    uint32 payment_id =1;
  uint32 patient_id = 2;
  uint32 doctor_id = 3;
  string doctor_name=4;
  uint64 fees = 5;
  string payment_status = 6;
}
message paymentRes {
  PaymentDetails payment_details = 1;
  string razorid = 2;
}
message verifyreq{
    uint32 payment_id=1;
}
message verifyres{}